Add filename to the getpath response
